deployment/sample/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ing
  labels:
    helm.sh/chart: sample-0.3.0
    app.kubernetes.io/name: sample
    app.kubernetes.io/instance: sample
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - http:
        paths:
          - path: /sample
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 8080
